fix dist-bar overflow css (#6844)

--- a/superset/assets/src/visualizations/nvd3/NVD3Vis.css
+++ b/superset/assets/src/visualizations/nvd3/NVD3Vis.css
@@ -29,7 +29,7 @@ text.nv-axislabel {
   font-size: 14px;
 }
 
-.slice_container.dist_bar {
+.dist_bar {
   overflow-x: auto !important;
 }
 
